# trading

./: .actrc  .ai_proof_of_fix.md  .ai_proof_of_fix_FINAL.md  .aider.chat.history.md  .cleanup_complete.md  .cursorrules  .dashboard_enhancements_summary.md  .enhanced_dashboard_summary.md  .env.example  .flake8  .gcloudignore  .gitignore  .mcp.json  .merge_operation_complete.md  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  AGENTS.md  ANSWER_QUANTUM_FOR_RELIABILITY.md  CLAUDE.md  CLOSE_ORPHAN.trigger  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_CLEANUP_PLAN.md  DEPLOYMENT_GUIDE.md  DIALOGFLOW_COMPLETE.md  DRY_RUN_READINESS_REPORT.md  Dockerfile.webhook  EMERGENCY_CLOSE.md  ENHANCEMENT_SUMMARY.md  ENSEMBLE_VOTING_SUMMARY.md  ESSENTIAL_TRADING_RULES.md  EXECUTE_SPREAD.trigger  FIBONACCI_EXEC_SUMMARY.txt  FIBONACCI_MILESTONES_VISUAL.md  FIX_SHELL_AND_COMMIT.sh  FORCE_CLOSE.trigger  FORCE_IRON_CONDOR.md  GEMINI.md  INTEGRATION_GUIDE.md  (+81 more)
.claude/: CLAUDE.md  DIRECTIVE_v2.1.md  HYGIENE_RULES.md  MCP_SETUP_INSTRUCTIONS.md  REFERENCE.md  SESSION_START_CHECKLIST.md  commands.md  dependency-history.json  mcp_config.json  prd.json  progress.txt  ralph_prompt.txt  settings.json  shared-skills
.github/: CREATE_RECORD  DEBUG_TRADE  EMERGENCY_TRADE  EXECUTE_NOW  FORCE_CRYPTO  FORCE_TRADE  INSTANT_TRADE  SIMPLE_TRADE  TRIGGER_DAILY_TRADING  TRIGGER_TRADING_NOW  dependabot.yml  local-secrets.env.example  trigger-trading.txt
.obsidian/: workspace.json
.pc-venv/: pyvenv.cfg
.playwright-mcp/: page-2026-05-11T18-00-25-667Z.yml
.thumbgate/: AUTO_REVIEW.md  prevention-rules.md
.trunk/: trunk.yaml
badges/: dryrun.json  progress.json
config/: asset_tiers.yaml  backtest_scenarios.yaml  browser_automation_provider.json  capital_deployment.json  day_trading_resources.yaml  go_live_checklist.json  playwright_mcp.yaml  portfolio_allocation.yaml  quantum_physics_trading_resources.yaml  regime_gate_thresholds.yaml  sandbox_config.json  strategies.yaml  strategy_registry.json
dashboard/: README.md  component_manifest.json  dashboard.py  data_exporter.py  generate_sample_data.py  main.py  mcp_server.py  path_to_100_dashboard.py  sentiment_dashboard.py  telemetry_app.py  trading_dashboard.py
data/: .trade_trigger  TRADING_HALTED  account_status.txt  backtest_trades.json  google_sheets_credentials.json.example  heartbeat.json  ic_entries.json  ic_stats.json  lessons_learned.txt  north_star_weekly_history.json  openrouter_pricing_baseline.json  performance_log.json  rag_lessons.md  spread_performance.json  strategy_params.json  system_state.json  tier2_watchlist.json  trade_journal.jsonl  trades.json  trades_2025-12-07.json  trades_2025-12-08.json  trades_2025-12-10.json  trades_2025-12-11.json  trades_2025-12-12.json  trades_2025-12-13.json  trades_2025-12-14.json  trades_2025-12-15.json  trades_2025-12-19.json  trades_2026-01-06.json  trades_2026-01-13.json  trades_2026-01-15.json  trades_2026-01-23.json  trades_backup.json  trading_halt.txt  verification_reports.json  video_2_transcript.txt  watchlist_4ms_small_capital.json
deploy/: jobs.yaml  scheduler.yaml  trading-daemon.service
docs/: 100-day-roadmap.md  2025_MULTI_AGENT_SYSTEM.md  404.md  5year_validation_guide.md  5year_validation_sample_output.md  ACT_LOCAL_TESTING.md  ADAPTIVE_AGENT_ORGANIZATION.md  ADAPTIVE_AGENT_ORGANIZATION_RESEARCH.md  ADAPTIVE_ORCHESTRATION_IMPLEMENTATION.md  ADK_DEPLOYMENT_PLAYBOOK.md  ADK_TRADING_QUICKSTART.md  AGENTS.md  AGENTS_TEMPORAL.md  AGENT_ARCHITECTURE.md  AGENT_INTEGRATIONS_ANALYSIS.md  AGENT_USAGE_ANALYSIS.md  ALERT_EXPLANATION.md  ALPACA_ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  ARCHITECTURE_INTEGRATION.md  AUDIT_FINDINGS_JAN_2026.md  AUTONOMOUS_SYSTEM_GUIDE.md  BACKTEST_USAGE.md  BEHAVIORAL_FINANCE.md  BONDS_TRADING_ANALYSIS.md  BROKER_DEPENDENCY.md  BROKER_FAILOVER.md  BUSINESS_MODEL_ASSESSMENT.md  CEO_BRIEFING.md  CEO_VERIFICATION_GUIDE.md  (+295 more)
(+3957 files in other folders)
